[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickusagemd"
version = "0.10.2"
description = ""
authors = [{ name = "JayPiKay", email = "jpk@goatpr0n.de" }]
requires-python = "~=3.8"
dependencies = [
    "GitPython>=3.1.27,<4",
    "click>=8.1.3,<9",
    "toml>=0.10.2,<0.11",
]

[project.scripts]
clickusagemd = "clickusagemd:cli"

[dependency-groups]
dev = ["pre-commit>=3.0.0,<4"]

[tool.hatch.build.targets.sdist]
include = [
    "clickusagelib/*.py",
    "clickusagemd.py",
]

[tool.hatch.build.targets.wheel]
include = [
    "clickusagelib/*.py",
    "clickusagemd.py",
]
